fix: change html and css from webflow export
fixes the legends to prevent them from overflowing the legend box

--- a/src/css/wazimap-ng-v1.webflow.css
+++ b/src/css/wazimap-ng-v1.webflow.css
@@ -594,6 +594,11 @@ label {
   width: 32px;
 }
 
+.svg-icon.svg-icon--no-size {
+  width: auto;
+  height: auto;
+}
+
 .cc-clear {
   margin: 0px;
   padding: 0px;
@@ -3812,10 +3817,23 @@ label {
   display: flex;
   height: 19px;
   margin-right: -2px;
+  -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
   -webkit-box-flex: 1;
   -webkit-flex: 1;
   -ms-flex: 1;
   flex: 1;
+  grid-auto-flow: column;
+  grid-auto-columns: -webkit-max-content;
+  grid-auto-columns: max-content;
+  -ms-grid-columns: -webkit-max-content;
+  -ms-grid-columns: max-content;
+  grid-template-columns: -webkit-max-content;
+  grid-template-columns: max-content;
+  -ms-grid-rows: auto;
+  grid-template-rows: auto;
 }
 
 .map_legend-block {
@@ -3824,11 +3842,10 @@ label {
   display: -ms-flexbox;
   display: flex;
   height: 19px;
-  min-width: 60px;
   margin-right: 2px;
   margin-left: 2px;
-  padding-right: 4px;
-  padding-left: 4px;
+  padding-right: 8px;
+  padding-left: 8px;
   -webkit-box-pack: center;
   -webkit-justify-content: center;
   -ms-flex-pack: center;
@@ -4822,6 +4839,10 @@ label {
   text-align: center;
   letter-spacing: 0.2px;
   text-transform: uppercase;
+}
+
+.map-options__legend_loading.hidden {
+  display: none;
 }
 
 .legend-block__loading-icon {
@@ -5952,8 +5973,8 @@ label {
 }
 
 .profile-logo {
-	margin: auto;
-	max-height: 100%;
+  max-height: 44px;
+  margin: auto;
 }
 
 .content {
@@ -6617,17 +6638,6 @@ label {
   background-color: #fff;
   box-shadow: 0 0 0 -1px rgba(0, 0, 0, 0.2), 1px 1px 6px -2px rgba(0, 0, 0, 0.3);
   cursor: pointer;
-}
-
-#map-download-title {
-  position: fixed;
-  top: 80px;
-  z-index: 998;
-  width: 100%;
-  text-align: center;
-  font-size: 30px;
-  font-weight: bold;
-  color: white;
 }
 
 .map-download:hover {
@@ -7856,6 +7866,4 @@ label {
     align-self: end;
   }
 }
-#dev-tools {
-	z-index:200;
-}
+
